package com.panda.study.designmodel.proxy.staticproxy;

/**
 * Created by Administrator on 2019/8/1.
 */
//接口
public interface ITeacherDao {
    void teach();//授课的方法
}
